Closing position before the next move

--- a/data_ingestion.ipynb
+++ b/data_ingestion.ipynb
@@ -223,13 +223,17 @@
     "        )\n",
     "    \n",
     "    def next(self):\n",
-    "        if (crossover(self.daily_rsi, self.upper_bound)\n",
-    "                and self.weekly_rsi[-1]> self.upper_bound):\n",
-    "            self.position.close()\n",
+    "        if crossover(self.daily_rsi, self.upper_bound):\n",
+    "            if self.position.is_long:\n",
+    "                self.position.close()\n",
+    "                self.sell()\n",
     "\n",
     "        elif (crossover(self.lower_bound, self.daily_rsi)\n",
-    "                and self.weekly_rsi[-1] < self.lower_bound):\n",
-    "            self.buy()\n",
+    "                and self.weekly_rsi[-1] < self.lower_bound\n",
+    "                ):\n",
+    "            if self.position.is_short:\n",
+    "                self.position.close()\n",
+    "                self.buy()\n",
     "\n",
     "bt = Backtest(GOOG, RsiOscillator, cash = 10_000)\n",
     "\n",
